grammar.js
        source_file: $ => repeat(seq($._declaration, $._newline)),



        ////////////////////////////////////////////////////////////////////////
        // Constants
        ////////////////////////////////////////////////////////////////////////

        _declaration_block: $ => block($, $._declaration),

        // Declarations0: use `optional($._declaration_block)` instead
        // _declaration_block0: $ => block($, optional($._declaration)),

        // Declaration
        _declaration: $ => choice(
            $.fields,
            $.function,
            $.data,
            $.data_signature,
            $.record,
            $.record_signature,
            $.infix,
            $.generalize,
            $.mutual,
            $.abstract,
            $.private,
            $.instance,
            $.macro,
            $.postulate,
            $.primitive,
            $.open,
            $.import,
            $.module_macro,
            $.module,
            $.pragma,
            $.syntax,
            $.pattern,
            $.unquote_decl,
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Field
        ////////////////////////////////////////////////////////////////////////

        // Fields
        fields: $ => seq(
            'field',
            $._signature_block,
        ),

        // ArgTypeSignatures
        _signature_block: $ => block($, $.signature),

        // ArgTypeSigs
        signature: $ => choice(
            seq(
                optional('overlap'),
                $._modal_arg_ids,
                ':',
                $.expr,
            ),
            seq(
                'instance',
                $._signature_block
            ),
        ),

        // ModalArgIds
        _modal_arg_ids: $ => seq(repeat($.attribute), $._arg_ids),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Functions
        ////////////////////////////////////////////////////////////////////////

        // We are splitting FunClause into 2 cases:
        //  *. function declaration (':')
        //  *. function definitions ('=')
        // Doing so we can mark the LHS of a function declaration as 'function_name'

        // FunClause
        function: $ => choice(
            seq(
                optional($.attributes),
                alias($.lhs_decl, $.lhs),
                alias(optional($.rhs_decl), $.rhs),
                optional($.where),
            ),
            seq(
                optional($.attributes),
                alias($.lhs_defn, $.lhs),
                alias(optional($.rhs_defn), $.rhs),
                optional($.where),
            ),
        ),

        // LHS
        with_expressions: $ => seq('with', $.expr),

        // RewriteEquations
        where: $ => seq(
            optional(seq(
                'module',
                $.bid
            )),
            'where',
            optional($._declaration_block)
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Data
        ////////////////////////////////////////////////////////////////////////

        data_name: $ => alias($.id, 'data_name'),

        data: $ => seq(
            choice('data', 'codata'),
            $.data_name,
            optional($._typed_untyped_bindings),
            optional(seq(':', $.expr)),
            'where',
            optional($._declaration_block)
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Data Signature
        ////////////////////////////////////////////////////////////////////////

        data_signature: $ => seq(
            'data',
            $.data_name,
            optional($._typed_untyped_bindings),
            ':',
            $.expr,
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Record
        ////////////////////////////////////////////////////////////////////////

        // Record
        record: $ => seq(
            'record',
            alias($._atom_no_curly, $.record_name),
            optional($._typed_untyped_bindings),
            optional(seq(':', $.expr)),
            $.record_declarations_block,
        ),

        // RecordDeclarations
        record_declarations_block: $ => seq(
            'where',
            indent($,
                // RecordDirectives
                repeat(seq($._record_directive, $._newline)),
                repeat(seq($._declaration, $._newline)),
            ),
        ),

        // RecordDirective
        _record_directive: $ => choice(
            $.record_constructor,
            $.record_constructor_instance,
            $.record_induction,
            $.record_eta
        ),
        // RecordConstructorName
        record_constructor: $ => seq('constructor', $.id),

        // Declaration of record constructor name.
        record_constructor_instance: $ => seq(
            'instance',
            block($, $.record_constructor),
        ),

        // RecordInduction
        record_induction: $ => choice(
            'inductive',
            'coinductive'
        ),

        // RecordEta
        record_eta: $ => choice(
            'eta-equality',
            'no-eta-equality'
        ),


        ////////////////////////////////////////////////////////////////////////
        // Declaration: Record Signature
        ////////////////////////////////////////////////////////////////////////

        record_signature: $ => seq(
            'record',
            alias($._atom_no_curly, $.record_name),
            optional($._typed_untyped_bindings),
            ':',
            $.expr
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Infix
        ////////////////////////////////////////////////////////////////////////

        infix: $ => seq(
            choice('infix', 'infixl', 'infixr'),
            $.integer,
            repeat1($.bid),
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Generalize
        ////////////////////////////////////////////////////////////////////////

        instance: $ => seq(
            'instance',
            optional($._declaration_block)
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Macro
        ////////////////////////////////////////////////////////////////////////

        primitive: $ => seq(
            'primitive',
            optional($._type_signature_block)
        ),

        // TypeSignatures
        _type_signature_block: $ => block($, $.type_signature),

        // TypeSigs
        type_signature: $ => seq(
            $._field_names,
            ':',
            $.expr
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Open
        ////////////////////////////////////////////////////////////////////////


        open: $ => seq(
            'open',
            choice(
                $.import, $.module_name
            ),
            optional($._atoms),
            optional($._import_directives),
        ),
        import: $ => seq('import', $.module_name),


        // ModuleName
        module_name: $ => prec.left(alias($.qid, 'module_name')),

        // ImportDirectives and shit
        _import_directives: $ => repeat1($.import_directive),
        import_directive: $ => choice(
            'public',
            seq('using', '(', $._comma_import_names, ')'),
            seq('hiding', '(', $._comma_import_names, ')'),
            seq('renaming', '(', sepR(';', $.renaming), ')'),
            seq('using', '(', ')'),
            seq('hiding', '(', ')'),
            seq('renaming', '(', ')')
        ),

        // CommaImportNames
        _comma_import_names: $ => sepR(';', $._import_name),

        // Renaming
        renaming: $ => seq(
            optional('module'),
            $.id,
            'to',
            $.id
        ),

        // ImportName
        module_macro: $ => seq(
            choice(
                seq('module', alias($.qid, $.module_name)),
                seq('open', 'module', alias($.qid, $.module_name)),
            ),
            optional($._typed_untyped_bindings),
            '=',
            $.module_application,
            repeat($.import_directive),
        ),

        // ModuleApplication
        module_application: $ => seq(
            $.module_name,
            choice(
                prec(1, brace_double($.ELLIPSIS)),
                optional($._atoms),
            ),
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Module
        ////////////////////////////////////////////////////////////////////////

        // Module
        module: $ => seq(
            'module',
            alias(choice($.qid, '_'), $.module_name),
            optional($._typed_untyped_bindings),
            'where',
            optional($._declaration_block)
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Pragma
        ////////////////////////////////////////////////////////////////////////

        // Pragma / DeclarationPragma
        syntax: $ => seq(
            'syntax',
            $.id,
            $.hole_names,
            '=',
            repeat1($.id)
        ),

        // HoleNames
        hole_names: $ => repeat1($.hole_name),
        hole_name: $ => choice(
            $._simple_top_hole,
            brace($._simple_hole),
            brace_double($._simple_hole),
            brace($.id, '=', $._simple_hole),
            brace_double($.id, '=', $._simple_hole),
        ),

        // SimpleTopHole
        _simple_top_hole: $ => choice(
            $.id,
            paren($.LAMBDA, $.bid, $.ARROW, $.id),
        ),

        // SimpleHole
        _simple_hole: $ => choice(
            $.id,
            seq($.LAMBDA, $.bid, $.ARROW, $.id),
        ),

        ////////////////////////////////////////////////////////////////////////
        // Declaration: Pattern Synonym
        ////////////////////////////////////////////////////////////////////////

        // PatternSyn
        id: $ => token(ID),

        // QId
        qid: $ => prec.left(alias(choice(QID, $.id), 'qid')),

        // BId
        bid: $ => alias(choice('_', $.id), 'bid'),

        // SpaceIds
        _field_names: $ => repeat1($._field_name),

        // MaybeDottedId
        _binding_ids_and_absurds: $ => prec(-1, choice(
            $._application,
            seq($.qid, '=', $.qid),
            seq($.qid, '=', '_'),
            seq('-', '=', $.qid),
            seq('-', '=', '_'),
        )),

        // Attribute
        expr: $ => choice(
            seq($._typed_bindings, $.ARROW, $.expr),
            seq(optional($.attributes), $._atoms, $.ARROW, $.expr),
            seq($._with_exprs, '=', $.expr),
            prec(-1, $._with_exprs), // lowest precedence
        ),
        _with_exprs: $ => seq(
            repeat(seq($._atoms, '|')),
            $._application,
        ),
        _application: $ => seq(
            optional($._atoms),
            $._expr2,
        ),
        atom: $ => choice(
            $._atom_curly,
            $._atom_no_curly,
        ),
        // Application3 / OpenArgs
        _atoms: $ => repeat1($.atom),

        _atom_curly: $ => brace(optional($.expr)),

        _atom_no_curly: $ => choice(
            '_',
            'Prop',
            'Set',
            'quote',
            'quoteTerm',
            'quoteContext',
            'unquote',
            $.SetN,
            $.PropN,
            brace_double($.expr),
            idiom($.expr),
            seq('(', ')'),
            seq('{{', '}}'),
            seq('⦃', '⦄'),
            seq($.id, '@', $.atom),
            seq('.', $.atom),
            $.record_assignments,
            alias($.field_assignments, $.record_assignments),
            $.ELLIPSIS,
            $._expr_or_attr
        ),

        // ForallBindings
        forall: $ => seq($.FORALL, $._typed_untyped_bindings, $.ARROW, $.expr),

        // LetBody
        lambda: $ => seq(
            $.LAMBDA,
            $._lambda_bindings,
            $.ARROW,
            $.expr
        ),

        // LamBinds
        _lambda_bindings: $ => seq(
            repeat($._typed_untyped_binding),
            choice(
                $._typed_untyped_binding,
                seq('(', ')'),
                seq('{', '}'),
                seq('{{', '}}'),
                seq('⦃', '⦄'),
            ),
        ),

        // ExtendedOrAbsurdLam
        _typed_bindings: $ => repeat1($.typed_binding),
        typed_binding: $ => choice(
            maybeDotted(choice(
                paren($._application, ':', $.expr),
                brace($._binding_ids_and_absurds, ':', $.expr),
                brace_double($._binding_ids_and_absurds, ':', $.expr),
            )),
            paren($.attributes, $._application, ':', $.expr),
            brace($.attributes, $._binding_ids_and_absurds, ':', $.expr),
            brace_double($.attributes, $._binding_ids_and_absurds, ':', $.expr),
            paren($.open),
            paren('let', $._declaration_block),
        ),

        // TypedUntypedBindings1
        _typed_untyped_bindings: $ => repeat1($._typed_untyped_binding),
        untyped_binding: $ => choice( // 13 variants
            maybeDotted(choice(
                $.bid,
                brace($._binding_ids_and_absurds),
                brace_double($._binding_ids_and_absurds),
            )),
            paren($._binding_ids_and_absurds),
            paren($.attributes, $._binding_ids_and_absurds),
            brace($.attributes, $._binding_ids_and_absurds),
            brace_double($.attributes, $._binding_ids_and_absurds),
        ),

        ////////////////////////////////////////////////////////////////////////
        // Literals
        ////////////////////////////////////////////////////////////////////////

        // -- Literals
        // <0,code> \'             { litChar }
        // <0,code,pragma_> \"     { litString }
        // <0,code> @integer       { literal LitNat }
        // <0,code> @float         { literal LitFloat }
        integer: $ => integer,
        comment: $ => token(choice(
            prec(100, seq('--', /.*/)),
            seq('{--}'),
            seq(
                '{-',
                /[^#]/,
                repeat(choice(
                    /[^-]/,     // anything but -
                    /-[^}]/,    // - not followed by }
                )),
                /-}/
            )
        )),

        // setN
