corpus/declaration/data-signature.txt
================================================================================
Simple
================================================================================

data Nat : Set

--------------------------------------------------------------------------------

(source_file
  (data_signature
    (data_name)
    (expr
      (atom
        (SetN)))))
